--- a/card.html
+++ b/card.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="preload" href="fonts/Lovelace-Text-Light-trial.woff2" as="font">
-	<link rel="preload" href="fonts/Lovelace-Text-Medium-trial.woff2" as="font">
-    <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
-    <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Light.woff2" as="font">
+	<link rel="preload" href="fonts/Lovelace-Regular.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Medium.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Bold.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -23,10 +23,10 @@
             <div class="container">
             <ul class="header-list list-reset">
                 <li class="top-header-list-item"><a href="#" class="lower-border-header">Авторизация</a></li>
-                <li class="position-right"><a href="#" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
-                <li class="top-header-list-item"><a href="payment.html">Оплата и доставка</a></li>
-                <li class="top-header-list-item"><a href="abbout-us.html">О компании</a></li>
-                <li class="top-header-list-item"><a href="contacts.html">Контакты</a></li>
+                <li class="position-right"><a target="_blank" href="https://yandex.ru/maps/193/voronezh/house/pushkinskaya_ulitsa_45/Z0AYdw9pSUwDQFtrfXp0dnhlZg==/?ll=39.189183%2C51.657494&z=19.35" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
+                <li class="top-header-list-item-right-col"><a href="payment.html">Оплата и доставка</a></li>
+                <li class="top-header-list-item-right-col"><a href="abbout-us.html">О компании</a></li>
+                <li class="top-header-list-item-right-col"><a href="contacts.html">Контакты</a></li>
             </ul>
         </div>
         </section>
@@ -34,49 +34,49 @@
                 <div class="container info-header">
                 <img src="img/logo.png" alt="logo" class="logo">
                 <ul class="header-list list-reset">
-                    <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
+                    <li class="header-phone"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
                     <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
-                    <li class="top-header-list-item favorite-header"></li>
-                    <li class="top-header-list-item add-to-cart-header"></li>
+                    <li class="top-header-list-item favorite-header">0</li>
+                    <li class="top-header-list-item add-to-cart-header">0</li>
                 </ul>
                 </div>
             </section>
             <section class="menu-header">
                 <nav class="container">
                     <ul class="menu list-reset">
-                        <li class="menu-item item-rose"><a href="#">Розы</a>
+                        <li class="menu-item item-rose"><a href="catalog.html">Розы</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-flower"><a href="#">Букеты</a>
+                        <li class="menu-item item-flower"><a href="catalog.html">Букеты</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-box"><a href="#">Коробки</a>
+                        <li class="menu-item item-box"><a href="catalog.html">Коробки</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-giff"><a href="#">Подарки</a>
+                        <li class="menu-item item-giff"><a href="catalog.html">Подарки</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
                         <li class="menu-item last-item-position item-service"><a href="services.html">Услуги</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="wedding-decoration.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
                         <li>
@@ -89,10 +89,10 @@
                     </nav>
             </section>
     </header>
-    <main class="wedding-bacground-leawes">
+    <main class="card-bacground-leawes">
         <div class="container">
             <div class="catalog-position-links">
-                <a href="index.html" class="link-to-main">Главная</a>|<a href="services.html" class="link-to-service">Каталог</a> | <a href="categori.html" class="link-to-wedding">Категория 1</a> | <a href="card.html">Карточка товара</a>
+                <a href="index.html" class="link-to-main">Главная</a>|<a href="services.html" class="link-to-service">Каталог</a> | <a href="categori.html" class="link-to-wedding">Категория 1</a> | <a class="link-product" href="card.html">Карточка товара</a>
             </div>
             <section class="card-product">
                     <div class="slider-card-product">
@@ -125,7 +125,9 @@
                     <div class="card-product-description">
                         <span class="article">Артикул: BKB510</span>
                         <h2 class="main-caption-card-product">Длинное название товара в две строки</h2>
+                        <div class="position-price-card-product">
                         <s class="card-price-decider-product">3 200 ₽</s><span class="card-price-active-product">2 800 ₽</span>
+                        </div>
                         <div class="set-list">
                             <p>Состав:</p>
                         <ul class="product-card-list">
@@ -144,7 +146,7 @@
                             <span class="height-set">23</span>
                             </div>
                         </div>
-                        <div>
+                        <div class="set-service">
                             <p>Способ оплаты:</p>
                                 <ul class="pay-list list-reset">
                                     <li class="pay-list-item pay-service-visa"></li>
@@ -153,42 +155,44 @@
                                     <li class="pay-list-item pay-service-bit"></li>
                                 </ul>
                         </div>
+                        <div class="set-btn-position">
+                            <button type="button" class="card-btn btn-minus"></button>
+                            <input type="number" class="card-input" readonly>
+                            <button type="button" class="card-btn btn-plus"></button>
+                        </div>
                         <div class="position-button-card">
-                            <button class="btn-cart-product add-to-cart-card">Купить</button>
+                            <button class="btn-cart-product add-to-cart-card">В корзину</button>
                             <button class="btn-cart-product buy-fast-card">Купить в один клик</button>
                         </div>
                     </div>
             </section>
             <section class="position-button-cart">
-            <div class="button-c">
-                <button class="button-card-tex" type="button">
-                    Описание
-                    <div class="block-position-on-btn">
-                    </div>
-                </button>
-                <button class="button-card-tex" type="button">
-                    Характеристики
-                    <div class="block-position-on-btn">
-                    </div>
-                </button>
-                <button class="button-card-tex" type="button">
-                    Отзывы
-                    <div class="block-position-on-btn">
-                    </div>
-                </button>
-            </div>
-            <div class="text-card text-description">
-                <p>H7 Headline Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</p>
-                <p>При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p>
-            </div>
-            <div class="text-card text-settings">
-                <p>H7 Headline Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</p>
-                <p>При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p>
-            </div>
-            <div class="text-card text-rev">
-                <p>H7 Headline Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</p>
-                <p>При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p>
-            </div>
+            <div class="tabs">
+                <input type="radio" name="tab-btn" id="tab-btn-1" value="" checked class="block-position-on-btn button-card-tex">
+                <label for="tab-btn-1">
+                    <div class="block-position-on-btn"></div>
+                    Описание</label>
+                <input type="radio" name="tab-btn" id="tab-btn-2" value="">
+                <label for="tab-btn-2">
+                    <div class="block-position-on-btn"></div>
+                    Характеристики</label>
+                <input type="radio" name="tab-btn" id="tab-btn-3" value="">
+                <label for="tab-btn-3">
+                    <div class="block-position-on-btn"></div>
+                    Отзывы</label>
+                <div id="content-1" class="content" style="padding-top: 50px; padding-bottom: 40px; padding-right: 50px;">
+                    <p class="text-width">H7 Headline Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</p>
+                    <p class="text-width">При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p>
+                </div>
+                <div id="content-2" class="content" style="padding-top: 50px; padding-bottom: 40px; padding-right: 50px;">
+                    <p class="text-width">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam natus repellendus ea veritatis odio, at sed impedit, quae in facilis quidem. Adipisci facere autem error consectetur nulla expedita tenetur esse!</p>
+                    <p class="text-width">При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p>
+                </div>
+                <div id="content-3" class="content" style="padding-top: 50px; padding-bottom: 40px; padding-right: 50px;">
+                    <p class="text-width">H7 Headline Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</p>
+                    <p class="text-width">При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p>
+                </div>
+              </div>
             </section>
             <section class="similar-products">
                 <h2 class="main-caption">Похожие товары</h2>
@@ -270,9 +274,9 @@
             <div class="container">
                 <ul class="footer-menu-list list-reset">
                     <li class="footer-menu-list-item"><a href="index.html">Главная</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Розы</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Коробки</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Подарки</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Розы</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Коробки</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Подарки</a></li>
                     <li class="footer-menu-list-item"><a href="services.html" class="last-item-footer-left">Услуги</a></li>
                     <li class="footer-menu-list-item"><a href="payment.html">Оплата и доставка</a></li>
                     <li class="footer-menu-list-item"><a href="abbout-us.html">О компании</a></li>
