--- a/payment.html
+++ b/payment.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оплата и доставка</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="preload" href="fonts/Lovelace-Text-Light-trial.woff2" as="font">
-	<link rel="preload" href="fonts/Lovelace-Text-Medium-trial.woff2" as="font">
-    <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
-    <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Light.woff2" as="font">
+	<link rel="preload" href="fonts/Lovelace-Regular.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Medium.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Bold.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -19,60 +19,60 @@
             <div class="container">
             <ul class="header-list list-reset">
                 <li class="top-header-list-item"><a href="#" class="lower-border-header">Авторизация</a></li>
-                <li class="position-right"><a href="#" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
-                <li class="top-header-list-item"><a href="payment.html">Оплата и доставка</a></li>
-                <li class="top-header-list-item"><a href="abbout-us.html">О компании</a></li>
-                <li class="top-header-list-item"><a href="contacts.html">Контакты</a></li>
+                <li class="position-right"><a target="_blank" href="https://yandex.ru/maps/193/voronezh/house/pushkinskaya_ulitsa_45/Z0AYdw9pSUwDQFtrfXp0dnhlZg==/?ll=39.189183%2C51.657494&z=19.35" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
+                <li class="top-header-list-item-right-col"><a href="payment.html">Оплата и доставка</a></li>
+                <li class="top-header-list-item-right-col"><a href="abbout-us.html">О компании</a></li>
+                <li class="top-header-list-item-right-col"><a href="contacts.html">Контакты</a></li>
             </ul>
         </div>
         </section>
-        <section class="header-info">
-            <div class="container info-header">
-            <img src="img/logo.png" alt="logo" class="logo">
-            <ul class="header-list list-reset">
-                <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
-                <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
-                <li class="top-header-list-item favorite-header"></li>
-                <li class="top-header-list-item add-to-cart-header"></li>
-            </ul>
-            </div>
-        </section>
+            <section class="header-info">
+                <div class="container info-header">
+                <img src="img/logo.png" alt="logo" class="logo">
+                <ul class="header-list list-reset">
+                    <li class="header-phone"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
+                    <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
+                    <li class="top-header-list-item favorite-header">0</li>
+                    <li class="top-header-list-item add-to-cart-header">0</li>
+                </ul>
+                </div>
+            </section>
             <section class="menu-header">
                 <nav class="container">
                     <ul class="menu list-reset">
-                        <li class="menu-item item-rose"><a href="#">Розы</a>
+                        <li class="menu-item item-rose"><a href="catalog.html">Розы</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-flower"><a href="#">Букеты</a>
+                        <li class="menu-item item-flower"><a href="catalog.html">Букеты</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-box"><a href="#">Коробки</a>
+                        <li class="menu-item item-box"><a href="catalog.html">Коробки</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-giff"><a href="#">Подарки</a>
+                        <li class="menu-item item-giff"><a href="catalog.html">Подарки</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
                         <li class="menu-item last-item-position item-service"><a href="services.html">Услуги</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="wedding-decoration.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
                         <li>
@@ -93,17 +93,17 @@
                     </div>
                     <div class="position-payment">
                         <div class="position-payment-img">
-                            <img src="img/payment.jpg" alt="flower">
+                            <img src="img/payment.jpg" alt="flower" class="payment-img">
                         </div>
                         <div class="position-pay padding-main-top">
                             <h2 class="main-caption-section pay">Оплата</h2>
                             <ul class="payment-list list-custom">
                                 <li class="payment-liat-item">
-                                    <p>Оплата наличными</p>
-                                    <p class="text-pay">Вы можете оплатить курьеру наличными или через терминал</p>
+                                    <p class="text-position">Оплата наличными</p>
+                                    <p class="text-pay text-position">Вы можете оплатить курьеру наличными или через терминал</p>
                                 </li>
                                 <li class="payment-liat-item pay-service">
-                                    <p>Электронными деньгами / Банковской картой</p>
+                                    <p class="text-position">Электронными деньгами / Банковской картой</p>
                                     <ul class="payment-list-service-pay list-reset">
                                         <li class="pay-list-item pay-service-visa"></li>
                                         <li class="pay-list-item pay-service-master"></li>
@@ -125,7 +125,7 @@
                         <div class="delivery-text">
                             <h2 class="main-caption-section deliveri-caption">Доставка</h2>
                             <p class="delivery-text-settings">Доставка цветов осуществляется без выходных. Заказать цветы Вы можете, связавшись с нами по телефону<br> +7 (903) 651 00 05 или написав нам через форму обратной связи в разделе «Контакты»</p>
-                            <p class="delivery-text-settings">Доставка осуществляется круглосуточно при оформлении заказа до 21.00. Стоимость доставки с 21.00 до 8.00 - 500 рублей. Стоимость доставки по городу 300 рублей. Стоимость доставки по Воронежской области и другие регионы уточняйте у менеджера.</p>
+                            <p class="delivery-text-settings delivery-text-settings-text">Доставка осуществляется круглосуточно при оформлении заказа до 21.00. Стоимость доставки с 21.00 до 8.00 - 500 рублей. Стоимость доставки по городу 300 рублей. Стоимость доставки по Воронежской области и другие регионы уточняйте у менеджера.</p>
                             <div class="position-delivery-price">
                                 <ul class="delivery-list list-custom">
                                     <li class="delivery-list-item">
@@ -173,10 +173,10 @@
         <section class="top-link-footer">
             <div class="container">
                 <ul class="footer-menu-list list-reset">
-                    <li class="footer-menu-list-item"><a href="catalog.html">Главная</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Розы</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Коробки</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Подарки</a></li>
+                    <li class="footer-menu-list-item"><a href="index.html">Главная</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Розы</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Коробки</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Подарки</a></li>
                     <li class="footer-menu-list-item"><a href="services.html" class="last-item-footer-left">Услуги</a></li>
                     <li class="footer-menu-list-item"><a href="payment.html">Оплата и доставка</a></li>
                     <li class="footer-menu-list-item"><a href="abbout-us.html">О компании</a></li>
@@ -193,6 +193,6 @@
                 </ul>
             </div>
         </section>
-    </footer> 
+    </footer>
 </body>
 </html>
