--- a/catalog.html
+++ b/catalog.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="preload" href="fonts/Lovelace-Text-Light-trial.woff2" as="font">
-	<link rel="preload" href="fonts/Lovelace-Text-Medium-trial.woff2" as="font">
-    <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
-    <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Light.woff2" as="font">
+	<link rel="preload" href="fonts/Lovelace-Regular.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Medium.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Bold.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -19,60 +19,60 @@
             <div class="container">
             <ul class="header-list list-reset">
                 <li class="top-header-list-item"><a href="#" class="lower-border-header">Авторизация</a></li>
-                <li class="position-right"><a href="#" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
-                <li class="top-header-list-item"><a href="payment.html">Оплата и доставка</a></li>
-                <li class="top-header-list-item"><a href="abbout-us.html">О компании</a></li>
-                <li class="top-header-list-item"><a href="contacts.html">Контакты</a></li>
+                <li class="position-right"><a target="_blank" href="https://yandex.ru/maps/193/voronezh/house/pushkinskaya_ulitsa_45/Z0AYdw9pSUwDQFtrfXp0dnhlZg==/?ll=39.189183%2C51.657494&z=19.35" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
+                <li class="top-header-list-item-right-col"><a href="payment.html">Оплата и доставка</a></li>
+                <li class="top-header-list-item-right-col"><a href="abbout-us.html">О компании</a></li>
+                <li class="top-header-list-item-right-col"><a href="contacts.html">Контакты</a></li>
             </ul>
         </div>
         </section>
-        <section class="header-info">
-            <div class="container info-header">
-            <img src="img/logo.png" alt="logo" class="logo">
-            <ul class="header-list list-reset">
-                <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
-                <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
-                <li class="top-header-list-item favorite-header"></li>
-                <li class="top-header-list-item add-to-cart-header"></li>
-            </ul>
-            </div>
-        </section>
+            <section class="header-info">
+                <div class="container info-header">
+                <img src="img/logo.png" alt="logo" class="logo">
+                <ul class="header-list list-reset">
+                    <li class="header-phone"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
+                    <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
+                    <li class="top-header-list-item favorite-header">0</li>
+                    <li class="top-header-list-item add-to-cart-header">0</li>
+                </ul>
+                </div>
+            </section>
             <section class="menu-header">
                 <nav class="container">
                     <ul class="menu list-reset">
-                        <li class="menu-item item-rose"><a href="#">Розы</a>
+                        <li class="menu-item item-rose"><a href="catalog.html">Розы</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-flower"><a href="#">Букеты</a>
+                        <li class="menu-item item-flower"><a href="catalog.html">Букеты</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-box"><a href="#">Коробки</a>
+                        <li class="menu-item item-box"><a href="catalog.html">Коробки</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-giff"><a href="#">Подарки</a>
+                        <li class="menu-item item-giff"><a href="catalog.html">Подарки</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
                         <li class="menu-item last-item-position item-service"><a href="services.html">Услуги</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="wedding-decoration.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
                         <li>
@@ -97,28 +97,28 @@
                     <div class="img-position-catalog catalog-image1">
                     </div>
                     <div class="position-catalog-caption-hover">
-                    <h3 class="catalog-list-item-caption"><a href="#">Розы</a></h3>
+                    <h3 class="catalog-list-item-caption"><a href="categori.html">Розы</a></h3>
                     </div>
                    </li>
                    <li class="catalog-list-item">
                     <div class="img-position-catalog  catalog-image2">
                     </div>
                     <div class="position-catalog-caption-hover">
-                    <h3 class="catalog-list-item-caption"><a href="#">Букеты</a></h3>
+                    <h3 class="catalog-list-item-caption"><a href="categori.html">Букеты</a></h3>
                     </div>
                    </li>
                    <li class="catalog-list-item">
                     <div class="img-position-catalog  catalog-image3">
                     </div>
                     <div class="position-catalog-caption-hover">
-                    <h3 class="catalog-list-item-caption"><a href="#">Коробки</a></h3>
+                    <h3 class="catalog-list-item-caption"><a href="categori.html">Коробки</a></h3>
                     </div>
                    </li>
                    <li class="catalog-list-item">
                     <div class="img-position-catalog  catalog-image4">
                     </div>
                     <div class="position-catalog-caption-hover">
-                    <h3 class="catalog-list-item-caption"><a href="#">Подарки</a></h3>
+                    <h3 class="catalog-list-item-caption"><a href="categori.html">Подарки</a></h3>
                     </div>
                    </li>
                </ul>
@@ -130,9 +130,9 @@
             <div class="container">
                 <ul class="footer-menu-list list-reset">
                     <li class="footer-menu-list-item"><a href="index.html">Главная</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Розы</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Коробки</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Подарки</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Розы</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Коробки</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Подарки</a></li>
                     <li class="footer-menu-list-item"><a href="services.html" class="last-item-footer-left">Услуги</a></li>
                     <li class="footer-menu-list-item"><a href="payment.html">Оплата и доставка</a></li>
                     <li class="footer-menu-list-item"><a href="abbout-us.html">О компании</a></li>
