--- a/contacts.html
+++ b/contacts.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Услуги</title>
+    <title>Контакты</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="preload" href="fonts/Lovelace-Text-Light-trial.woff2" as="font">
-	<link rel="preload" href="fonts/Lovelace-Text-Medium-trial.woff2" as="font">
-    <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
-    <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Light.woff2" as="font">
+	<link rel="preload" href="fonts/Lovelace-Regular.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Medium.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Bold.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -19,10 +19,10 @@
             <div class="container">
             <ul class="header-list list-reset">
                 <li class="top-header-list-item"><a href="#" class="lower-border-header">Авторизация</a></li>
-                <li class="position-right"><a href="#" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
-                <li class="top-header-list-item"><a href="payment.html">Оплата и доставка</a></li>
-                <li class="top-header-list-item"><a href="abbout-us.html">О компании</a></li>
-                <li class="top-header-list-item"><a href="contacts.html">Контакты</a></li>
+                <li class="position-right"><a target="_blank" href="https://yandex.ru/maps/193/voronezh/house/pushkinskaya_ulitsa_45/Z0AYdw9pSUwDQFtrfXp0dnhlZg==/?ll=39.189183%2C51.657494&z=19.35" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
+                <li class="top-header-list-item-right-col"><a href="payment.html">Оплата и доставка</a></li>
+                <li class="top-header-list-item-right-col"><a href="abbout-us.html">О компании</a></li>
+                <li class="top-header-list-item-right-col"><a href="contacts.html">Контакты</a></li>
             </ul>
         </div>
         </section>
@@ -30,49 +30,49 @@
                 <div class="container info-header">
                 <img src="img/logo.png" alt="logo" class="logo">
                 <ul class="header-list list-reset">
-                    <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
+                    <li class="header-phone"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
                     <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
-                    <li class="top-header-list-item favorite-header"></li>
-                    <li class="top-header-list-item add-to-cart-header"></li>
+                    <li class="top-header-list-item favorite-header">0</li>
+                    <li class="top-header-list-item add-to-cart-header">0</li>
                 </ul>
                 </div>
             </section>
             <section class="menu-header">
                 <nav class="container">
                     <ul class="menu list-reset">
-                        <li class="menu-item item-rose"><a href="#">Розы</a>
+                        <li class="menu-item item-rose"><a href="catalog.html">Розы</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-flower"><a href="#">Букеты</a>
+                        <li class="menu-item item-flower"><a href="catalog.html">Букеты</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-box"><a href="#">Коробки</a>
+                        <li class="menu-item item-box"><a href="catalog.html">Коробки</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-giff"><a href="#">Подарки</a>
+                        <li class="menu-item item-giff"><a href="catalog.html">Подарки</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
                         <li class="menu-item last-item-position item-service"><a href="services.html">Услуги</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="wedding-decoration.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
                         <li>
@@ -94,19 +94,19 @@
                <div class="contact-position">
                    <div class="contact-adress">
                        <span class="position-adres">
-                           <p>Телефон:</p>
+                           <p class="adress-teg">Телефон:</p>
                            <a href="tel:+79036510005" class="left-dot">+7 903-651-00-05</a>
                         </span>
                         <span class="position-adres">
-                            <p>E-mail:</p>
+                            <p class="adress-teg">E-mail:</p>
                             <a href="mailto:labflower_voronezh@mail.ru" class="left-dot">labflower_voronezh@mail.ru</a>
                          </span>
                          <span class="position-adres">
-                            <p>Адрес:</p>
+                            <p class="adress-teg">Адрес:</p>
                             <a href="https://yandex.ru/maps/193/voronezh/house/pushkinskaya_ulitsa_45/Z0AYdw9pSUwDQFtrfXp0dnhlZg==/?ll=39.189183%2C51.657494&z=19.35" target="_blank" class="left-dot">Воронеж ул. Пушкинская д. 45</a>
                          </span>
                          <span class="position-adres">
-                            <p>Время работы:</p>
+                            <p class="adress-teg">Время работы:</p>
                             <p class="left-dot left-dot-time">с 08.00 до 21.00 без выходных</p>
                          </span>
                    </div>
@@ -132,9 +132,9 @@
             <div class="container">
                 <ul class="footer-menu-list list-reset">
                     <li class="footer-menu-list-item"><a href="index.html">Главная</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Розы</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Коробки</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Подарки</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Розы</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Коробки</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Подарки</a></li>
                     <li class="footer-menu-list-item"><a href="services.html" class="last-item-footer-left">Услуги</a></li>
                     <li class="footer-menu-list-item"><a href="payment.html">Оплата и доставка</a></li>
                     <li class="footer-menu-list-item"><a href="abbout-us.html">О компании</a></li>
