--- a/wedding-decoration.html
+++ b/wedding-decoration.html
@@ -9,74 +9,74 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <link rel="preload" href="fonts/Lovelace-Text-Light-trial.woff2" as="font">
-	<link rel="preload" href="fonts/Lovelace-Text-Medium-trial.woff2" as="font">
-    <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
-    <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Light.woff2" as="font">
+	<link rel="preload" href="fonts/Lovelace-Regular.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Medium.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Bold.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
-    <header class="headder">
+    <header>
         <section class="top-header">
             <div class="container">
             <ul class="header-list list-reset">
                 <li class="top-header-list-item"><a href="#" class="lower-border-header">Авторизация</a></li>
-                <li class="position-right"><a href="#" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
-                <li class="top-header-list-item"><a href="payment.html">Оплата и доставка</a></li>
-                <li class="top-header-list-item"><a href="abbout-us.html">О компании</a></li>
-                <li class="top-header-list-item"><a href="contacts.html">Контакты</a></li>
+                <li class="position-right"><a target="_blank" href="https://yandex.ru/maps/193/voronezh/house/pushkinskaya_ulitsa_45/Z0AYdw9pSUwDQFtrfXp0dnhlZg==/?ll=39.189183%2C51.657494&z=19.35" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
+                <li class="top-header-list-item-right-col"><a href="payment.html">Оплата и доставка</a></li>
+                <li class="top-header-list-item-right-col"><a href="abbout-us.html">О компании</a></li>
+                <li class="top-header-list-item-right-col"><a href="contacts.html">Контакты</a></li>
             </ul>
         </div>
         </section>
-        <section class="header-info">
-            <div class="container info-header">
-            <img src="img/logo.png" alt="logo" class="logo">
-            <ul class="header-list list-reset">
-                <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
-                <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
-                <li class="top-header-list-item favorite-header"></li>
-                <li class="top-header-list-item add-to-cart-header"></li>
-            </ul>
-            </div>
-        </section>
+            <section class="header-info">
+                <div class="container info-header">
+                <img src="img/logo.png" alt="logo" class="logo">
+                <ul class="header-list list-reset">
+                    <li class="header-phone"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
+                    <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
+                    <li class="top-header-list-item favorite-header">0</li>
+                    <li class="top-header-list-item add-to-cart-header">0</li>
+                </ul>
+                </div>
+            </section>
             <section class="menu-header">
                 <nav class="container">
                     <ul class="menu list-reset">
-                        <li class="menu-item item-rose"><a href="#">Розы</a>
+                        <li class="menu-item item-rose"><a href="catalog.html">Розы</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-flower"><a href="#">Букеты</a>
+                        <li class="menu-item item-flower"><a href="catalog.html">Букеты</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-box"><a href="#">Коробки</a>
+                        <li class="menu-item item-box"><a href="catalog.html">Коробки</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item item-giff"><a href="#">Подарки</a>
+                        <li class="menu-item item-giff"><a href="catalog.html">Подарки</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
                         <li class="menu-item last-item-position item-service"><a href="services.html">Услуги</a>
                             <ul class="submenu list-reset">
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
-                                <li><a href="#">Красные</a></li>
+                                <li><a href="wedding-decoration.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
+                                <li><a href="categori.html">Красные</a></li>
                             </ul>
                         </li>
                         <li>
@@ -103,11 +103,11 @@
                         <button type="button" class="wedding-btn">Консультация</button>
                     </div>
                     <div class="slider">
-                        <div class="swiper-container">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="img/wedding-slider.jpg" alt="slide1"></div>
-                            <div class="swiper-slide"><img src="img/wedding-slider.jpg" alt="slide2"></div>
-                            <div class="swiper-slide"><img src="img/wedding-slider.jpg" alt="slide3"></div>
+                        <div class="swiper-container-wedding swiper-container">
+                        <div class="swiper-wrapper-wedding swiper-wrapper">
+                            <div class="swiper-slide swiper-slide-set"><img src="img/wedding-slider.jpg" alt="slide1"></div>
+                            <div class="swiper-slide swiper-slide-set"><img src="img/wedding-slider.jpg" alt="slide2"></div>
+                            <div class="swiper-slide swiper-slide-set"><img src="img/wedding-slider.jpg" alt="slide3"></div>
                         </div>
                         <div class="swiper-pagination"></div>
                         </div>
@@ -122,9 +122,9 @@
             <div class="container">
                 <ul class="footer-menu-list list-reset">
                     <li class="footer-menu-list-item"><a href="index.html">Главная</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Розы</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Коробки</a></li>
-                    <li class="footer-menu-list-item"><a href="#">Подарки</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Розы</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Коробки</a></li>
+                    <li class="footer-menu-list-item"><a href="categori.html">Подарки</a></li>
                     <li class="footer-menu-list-item"><a href="services.html" class="last-item-footer-left">Услуги</a></li>
                     <li class="footer-menu-list-item"><a href="payment.html">Оплата и доставка</a></li>
                     <li class="footer-menu-list-item"><a href="abbout-us.html">О компании</a></li>
